--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 
                         <div class="col-12 col-md-3 col-xl-2">
                             <span class="d-flex align-items-center justify-content-center justify-content-md-end"> <a href="tel:+9431255933" target="_blank"><i class="fa-solid fa-phone me-2"></i> 9431255933</a> </span>
+                            <span class="d-flex d-lg-none mt-2 mt-lg-0 align-items-center justify-content-center justify-content-md-end"> <a href="tel:+919431246114" target="_blank"><i class="fa-solid fa-phone me-2"></i> 9431255933</a> </span>
                         </div><!--***** End of right-->
                     </div>
                 </div>
